# pico-sd

./: .gitignore  CMakeLists.txt  README.md
bmerawdata/: CMakeLists.txt  main.c
lib/: CMakeLists.txt
lib/bme68x/: CMakeLists.txt  bme68x.c
lib/bme_api/: CMakeLists.txt  README.md  bme68x_API.c  bme68x_API.h
lib/bsec/: CMakeLists.txt
lib/json/: CMakeLists.txt  read_json.c  read_json.h
only_sd/: CMakeLists.txt  hw_config.c  main.c
